# MRO-Control-systems-Assignment

./: README.md
control/lqr_controller/: CMakeLists.txt  package.xml
control/lqr_controller/launch/: lqr_control.launch
control/lqr_controller/scripts/: lqr_controller.py
control/mpc_controller/: CMakeLists.txt  package.xml
control/mpc_controller/launch/: mpc_control.launch
control/mpc_controller/script/: mpc_controller.py
