<package format="2">
  <name>lqr_controller</name>
  <version>0.0.1</version>
  <description>ROS package for TurtleBot model predictive control</description>
  <maintainer email="mathimanichandan@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>std_msgs</depend>

  <export></export>
</package>
